bundled_metadata/force-app/main/default/objects/Checklist_Answer__c/Checklist_Answer__c.object-meta.xml
<CustomObject>
    <label>Checklist Answer</label>
    <nameField>
        <displayFormat>ANS-{000000000}</displayFormat>
        <label>Answer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>