bundled_metadata/force-app/main/default/objects/Checklist_Answer__c/fields/Answer_Text__c.field-meta.xml
<CustomField>
    <fullName>Answer_Text__c</fullName>
    <label>Answer Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>