bundled_metadata/force-app/main/default/objects/Checklist_Answer__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question</label>
    <referenceTo>HS_Checklist__c</referenceTo>
    <relationshipLabel>Checklist Answers</relationshipLabel>
    <relationshipName>Checklist_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>