bundled_metadata/force-app/main/default/objects/Checklist_Answer__c/fields/Submission__c.field-meta.xml
<CustomField>
    <fullName>Submission__c</fullName>
    <label>Checklist Submission</label>
    <referenceTo>Checklist_Submission__c</referenceTo>
    <relationshipLabel>Checklist Answers</relationshipLabel>
    <relationshipName>Checklist_Answers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>